# c-code

./: .gitignore  CMakeLists.txt  main.c
C语言课件/: 第02章_变量与进制.md  第03章_运算符与流程控制.md
chapter01/: 01_Hello.c  02_CommentTest.c  03_HelloC.c
chapter02/: 01_IdentifierTest.c  02_VariableTest.c  03_IntTest.c  04_FloatDoubleTest.c  05_CharTest.c  06_BooleanTest.c  07_ValueConvertTest.c  08_ConstantTest.c  09_IOTest.c  10_BinaryTest.c  11_TestIO.c
chapter03/: 01_AriTest.c  02_AriExer.c  03_SetValue.c  04_CompareTest.c  05_LogicTest.c  06_BitTest.c  07_ConditionTest.c  08_SizeOfTest.c  09_IfElseTest.c  10_IfElseTest1.c  12_SwitchCaseTest.c  13_SwitchCaseTest1.c  14_ForTest.c  15_ForTest1.c  16_WhileTest.c  17_WhileTest1.c  18_DoWhileTest.c  20_ForWhileTest.c  21_ForForTest.c  22_BreakContinueTest.c  23_BreakContinueTest1.c  24_gotoTest.c
chapter04/: 01_ArrayTest.c  02_ArrayTest1.c  03_ArrayTest2.c  04_ArrayExer.c  05_ArrayExer1.c  06_ArrayExer2.c  07_StringTest.c  08_ArrayMore.c  09_ArrayMore1.c  10_ArrayMoreExer.c  11_ArrayMoreExer1.c  12_ArrayMoreExer2.c
chapter05/: 01_PointerTest.c  02_PointerTest1.c  03_PointerTest2.c  04_PointerTest3.c  05_PointerTest4.c  06_DoublePointer.c  07_malloc.c  08_PointerAndArray.c  09_PointerAndArray1.c  11_PointerArrayExer1.c  12_PointerAndArray2.c  13_PointerAndArray3.c  14_PointerAndArray4.c  15_PointerAndArray5.c  16_PointerArray.c  17_CharArray.c  18_StringArray.c  19_PointerAndArray6.c  20_PointerAndArray7.c  AA_AdvancedPointers.c  AA_heima.c  AA_heima2.c
chapter06/: 01_FunctionDefine.c  02_FunctionDefine.c  03_FunctionDefine.c  (+25 more)
(+42 files in other folders)
